# Aisha_bot_new

./: .dockerignore  .gitignore  .pre-commit-config.yaml_  ACTIVE_FILES.md  AVATAR_FIX_REPORT.md  COMMIT_SUMMARY.md  DATABASE_FIX_REPORT.md  DEDUPLICATION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_WEBHOOK.md  DOCKER_CONTAINERS_SUMMARY.md  FIREWALL_FIX.md  FIXES_SUMMARY.md  FIXES_SUMMARY_FINAL.md  GALLERY_FIX_REPORT.md  GENERATION_SETUP_COMPLETE.md  IMPORT_FIX_REPORT.md  INSTALL_NGINX.md  LEGACY_CLEANUP_COMPLETION_REPORT.md  LEGACY_CLEANUP_PLAN.md  LEGACY_CLEANUP_REPORT.md  Makefile.webhook  NEGATIVE_PROMPT_SYSTEM.md  NOTIFICATION_INTEGRATION_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_FILES_LIST.md  PRODUCTION_FIX_REPORT.md  PRODUCTION_READINESS_CHECKLIST.md  PROMPT_PROCESSING_COMPLETE.md  PROMPT_SYSTEM_READY.md  QUICK_START.md  README.Docker.md  README.md  README_V2.md  SETUP_INSTRUCTIONS_GPT_PROMPTS.md  STARTUP_CHECKER_FREQUENCY_UPDATE.md  STATUS_CHECKER_ANALYSIS_REPORT.md  STATUS_CHECKER_TIMING_FIX_REPORT.md  TASK.md  TELEGRAM_TOKEN_SETUP.md  (+75 more)
aisha_v1/: .gitignore  README.md  README_V2.md  TODO.md  bot.py  docker-compose.yml  get_all_branches.sh  git_strategy.md  logging.conf  requirements.txt
aisha_v2/: README.md  __init__.py  alembic.ini  precommit-config.yaml  requirements.txt
alembic/: env.py
api_server/: Dockerfile.webhook  legacy_main.py  main.py  requirements.txt  run_api_server.py  webhook_main.py
app/: api_server.py  embedded_webhook_server.py  main.py
database/: config.py  models.py  repository.py
tests/: README.md  (+29 more)
(+1170 files in other folders)
